kubernetes/overlays/ap-south-1/prod/replicas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyzer
spec:
  replicas: 2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anonymizer
spec:
  replicas: 2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocr
spec:
  replicas: 2
